Fixed the layout issue with the color selector. Added the website url to the readme. Moved the graph years to have similar margins to the sides.

--- a/src_gui/app/show-paintings/show-paintings.component.css
+++ b/src_gui/app/show-paintings/show-paintings.component.css
@@ -11,4 +11,6 @@
     margin-right:auto;
     min-width:150px;
     margin-top:2em;
+    margin-bottom: 1em;
+    min-height: 2em;
   }
